<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    tools:context=".app.settings.settingsWithoutAuth.SettingsFragment">

    <TextView
        android:id="@+id/settingsNickDesc"
        style="@style/SettingsTextDescription"
        android:text="@string/settings_nick_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/montserrat_bold_italic"
        android:id="@+id/username"
        style="@style/SettingsTextDescription"
        android:text="XXX"
        app:layout_constraintLeft_toRightOf="@id/settingsNickDesc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:paddingRight="12dp"
        android:id="@+id/colorModeDesc"
        style="@style/SettingsTextDescription"
        android:text="@string/dark_mode_desc"
        app:layout_constraintBottom_toBottomOf="@+id/settingsColorMode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/settingsColorMode" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsColorMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintLeft_toRightOf="@+id/colorModeDesc"
        app:layout_constraintTop_toBottomOf="@+id/settingsNickDesc" />

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/authOptionsDesc"
        style="@style/SettingsTextDescription"
        android:text="@string/login_register_options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsColorMode" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authOptionsDesc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDeleteAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/delete_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogout"
        app:strokeColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/authentication_description"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDeleteAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>